// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PivotConfigGenerator should add a event annotation config when configured 1`] = `
Object {
  "config": Object {
    "column_groups": Array [],
    "id": "vals",
    "rollup": true,
    "row_groups": Array [
      Object {
        "field": "field",
        "type": "type",
      },
    ],
    "series": Array [
      Object {
        "id": "count",
      },
    ],
    "sort": Array [],
  },
  "id": Any<String>,
  "name": "chart",
  "type": "pivot",
}
`;

exports[`PivotConfigGenerator should add a event annotation config when configured 2`] = `
Object {
  "id": Any<String>,
  "name": "events",
  "type": "events",
}
`;

exports[`PivotConfigGenerator should generate a chart config 1`] = `
Object {
  "column_groups": Array [],
  "id": Any<String>,
  "rollup": true,
  "row_groups": Array [
    Object {
      "field": "field",
      "type": "type",
    },
  ],
  "series": Array [
    Object {
      "id": "count",
    },
  ],
  "sort": Array [],
}
`;

exports[`PivotConfigGenerator should generate a number config with trend 1`] = `
Object {
  "config": Object {
    "column_groups": Array [],
    "id": "vals",
    "rollup": true,
    "row_groups": Array [
      Object {
        "field": "field",
        "type": "type",
      },
    ],
    "series": Array [
      Object {
        "id": "count",
      },
    ],
    "sort": Array [],
  },
  "id": Any<String>,
  "name": "chart",
  "type": "pivot",
}
`;

exports[`PivotConfigGenerator should generate a number config with trend 2`] = `
Object {
  "config": Object {
    "column_groups": Array [],
    "id": "vals",
    "rollup": true,
    "row_groups": Array [
      Object {
        "field": "field",
        "type": "type",
      },
    ],
    "series": Array [
      Object {
        "id": "count",
      },
    ],
    "sort": Array [],
  },
  "id": Any<String>,
  "name": "trend",
  "timerange": Object {
    "id": Any<String>,
    "source": "search_type",
    "type": "offset",
  },
  "type": "pivot",
}
`;
